AP-10644: new enum, implementation in page builder
AP-10644 (JS views: new aspect ratio setting "square" (1:1))